charts/element-web/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: element-web
spec:
  parentRefs:
    - name: http-gateway
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway
      sectionName: https
  hostnames:
    - chat.g4v.dev
  rules:
    - backendRefs:
        - name: element-web
          port: 80
          group: ''
          kind: Service
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
